--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ dnspython==2.7.0
 email_validator==2.2.0
 fastapi==0.115.12
 fastapi-cli==0.0.7
+greenlet==3.2.1
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.6.4
@@ -17,6 +18,7 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 pydantic==2.11.3
+pydantic-settings==2.9.1
 pydantic_core==2.33.1
 Pygments==2.19.1
 python-dotenv==1.1.0
@@ -26,6 +28,7 @@ rich==14.0.0
 rich-toolkit==0.14.3
 shellingham==1.5.4
 sniffio==1.3.1
+SQLAlchemy==2.0.40
 starlette==0.46.2
 typer==0.15.3
 typing-inspection==0.4.0
