--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-annotated-types==0.7.0                                                                                        
+annotated-types==0.7.0
 anyio==4.9.0
+bcrypt==4.3.0
 certifi==2025.4.26
 click==8.1.8
 colorama==0.4.6
@@ -17,6 +18,7 @@ Jinja2==3.1.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+passlib==1.7.4
 psycopg2==2.9.10
 pydantic==2.11.3
 pydantic-settings==2.9.1
